--- a/UI_2022_R00/assets/css/darklightToggle.css
+++ b/UI_2022_R00/assets/css/darklightToggle.css
@@ -1,47 +1,67 @@
-.toggle input[type='checkbox'] {
-    display: none;
-}
-
-.toggle label {
-    background-color: #777;
-    border: 2px solid #555;
-    border-radius: 50px;
-    cursor: pointer;
-    display: inline-block;
-    position: relative;
-    transition: all ease-in-out 0.3s;
-    width: 100px;
-    height: 50px;
-}
-
-.toggle label::after {
-    background-color: #555;
-    border-radius: 50%;
-    content: ' ';
-    cursor: pointer;
-    display: inline-block;
-    position: absolute;
-    left: 2px;
-    top: 2px;
-    transition: all ease-in-out 0.3s;
-    width: 42px;
-    height: 42px;
-}
-
-.toggle input[type='checkbox']:checked ~ label {
-    background-color: #00a0fc;
-    border-color: #006dc9;
-}
-
-.toggle input[type='checkbox']:checked ~ label::after {
-    background-color: #0054b0;
-    transform: translateX(50px);
+* {
+  box-sizing: border-box;
 }
 
 body {
-    background-color: #f5f7fa;
+  background-color: hsl(67, 74%, 95%);
+  
+  /* display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  
+  transition: all ease-in-out 0.3s;
+
+  min-height: 100vh;
+  font-family: 'Lato', sans-serif;
+  margin: 0; */
 }
 
 body.dark-theme {
-    background-color: #333;
+  background-color: rgb(46, 46, 48);
+}
+
+.text-container {
+  max-width: 600px;
+  text-align: center;
+}
+
+.toggle input[type=checkbox] {
+  display: none;
+}
+
+.toggle label {
+  background-color: #777;
+  border: 2px solid #555;
+  border-radius: 50px;
+  cursor: pointer;
+  display: inline-block;
+  position: relative;
+  transition: all ease-in-out 0.3s;
+  width: 100px;
+  height: 50px;
+}
+
+.toggle label::after {
+  background-color: #555;
+  border-radius: 50%;
+  content: ' ';
+  cursor: pointer;
+  display: inline-block;
+  position: absolute;
+  left: 2px;
+  top: 2px;
+  transition: all ease-in-out 0.3s;
+  width: 42px;
+  height: 42px;
+}
+
+.toggle input[type=checkbox]:checked ~ label {
+  background-color: #00a0fc;
+  border-color: #006dc9;
+}
+
+.toggle input[type=checkbox]:checked ~ label::after {
+  background-color: #0054B0;
+  transform: translateX(50px);
 }
