--- a/UI_2022_R00/assets/css/style.css
+++ b/UI_2022_R00/assets/css/style.css
@@ -247,7 +247,7 @@ html[data-theme="light"] {
     cursor: pointer;
     width: 100px;
     height: 40px;
-    background-image: url(https://i.postimg.cc/857jHw2q/Screenshot-2020-04-16-at-1-07-06-PM.png);
+    background-image: url(../images/sunny.png);
     background-size: cover;
     border-radius: 50px;
     outline: none;
@@ -269,7 +269,7 @@ html[data-theme="light"] {
   }
   
   .dark_toggler:checked {
-    background-image: url(https://i.postimg.cc/Hn0nstVK/Screenshot-2020-04-16-at-1-07-19-PM.png);
+    background-image: url(../images/night.png);
     transition: background-image 0.9s;
     box-shadow: 0px 2px 5px 1px rgb(187, 134, 201);
   }
@@ -555,7 +555,7 @@ html[data-theme="light"] {
   
   
   /********
-  Rotate Transition in foote Soical Icon
+  Rotate Transition in foote Social Icon
   *********/
   
   .rounded-social-buttons .social-button:hover,
