--- a/Test_1/Samples/01/styles.css
+++ b/Test_1/Samples/01/styles.css
@@ -1,3 +1,8 @@
+@font-face {
+    font-family: "Agustina";
+    src: url(../../../UI_2022_R00/assets/fonts/Agustina.woff);
+  }
+
 *{
     margin: 0;
     padding: 0;
@@ -30,6 +35,7 @@ html, body {
 }
 
 .checkboxes {
+    font-family: "Segoe UI";
     position: absolute;
     left: 1rem;
     top: 1rem;
