Khoa_9th_Commit

--- a/UI_2022_R00/assets/css/home.css
+++ b/UI_2022_R00/assets/css/home.css
@@ -606,7 +606,7 @@ html[data-theme="light"] {
     /* position: fixed; */
     /* top: 0; */
     /* left: 0; */
-    /* background: #000; */
+    background: rgba(106, 131, 243, 0.205);
     opacity: 1;
     /* z-index: 998; */
     /* height: 100%; */
