--- a/Test_1/Samples/01/styles.css
+++ b/Test_1/Samples/01/styles.css
@@ -36,7 +36,23 @@ html, body {
 
 .checkboxes {
     font-family: "Segoe UI";
+    font-weight: 200;
     position: absolute;
     left: 1rem;
-    top: 1rem;
+    top: 30%;
+    /* position: relative; */
+    /* text-align: center; */
+    float: left;
+}
+.checkboxes_text:hover{
+    background-color: rgb(255, 230, 89);
+    border-radius:20%;
+    height: 10ex;
+    width: 120%;
+    font-weight: bold;
+    color: rgb(28, 51, 255);
+}
+
+.background {
+    opacity: 1;
 }
