--- a/MERN/frontend/src/components/HeaderComponent.css
+++ b/MERN/frontend/src/components/HeaderComponent.css
@@ -11,6 +11,16 @@ i {
 	margin-right: 10px;
 }
 
+.navbar{
+	/* position: fixed; */
+	/* position: fixed;  */
+	/* left: 0;  */
+	/* z-index: 9999;  */
+	/* width: 100%;  */
+	/* height: 50px; */
+	/* top: 0px; */
+}
+
 .navbar-logo{
 	padding: 15px;
 	/* border-bottom-right-radius: 20px 20px; */
@@ -19,19 +29,20 @@ i {
 	/* background-color: #aa2c28; */
 }
 .navbar-mainbg{
-	background-color: #284baa;
+	background-color: #4da5db;
 	/* border-bottom-right-radius: 15px 15px; */
 	padding: 0px;
 }
 .navbar-log{
 	/* margin-right: 0px; */
 	/* display: inline-block; */
-	background-color: #9aa4c044;
+	background-color: #0f487c;
 	position: relative;
 	/* overflow: auto; */
 	right: 20px;
 	color: #fff;
 	/* float: right; */
+	font-weight: bold;
 }
 #navbarSupportedContent{
 	left: 10px;
@@ -92,7 +103,7 @@ i {
 	left: 0px;
 	transition-duration:0.6s;
 	transition-timing-function: cubic-bezier(0.68, -0.55, 0.265, 1.55);
-	background-color: #fff;
+	background-color: rgb(255, 255, 255);
 	border-top-left-radius: 15px;
 	border-top-right-radius: 15px;
 	margin-top: 10px;
@@ -118,7 +129,7 @@ i {
     width: 50px;
     height: 50px;
     border-radius: 50%;
-    background-color: #284baa;
+    background-color: #4da5db;
 }
 .hori-selector .right:before{
 	bottom: 0;
