--- a/MERN/frontend/src/chats.css
+++ b/MERN/frontend/src/chats.css
@@ -3,7 +3,7 @@
   right: 14px;
   bottom: 30px;
   cursor: pointer;
-  background-color: blue;
+  background-color: rgb(0, 26, 173);
   border-radius: 50px;
   width: 50px;
   height: 50px;
